# roosebelt_hiciano_Micro_2025_C2

./: proyecto.kicad_prl  proyecto.kicad_pro  proyecto.xml  tarea2.c
esp32-freertos-timer/include/: freertos_timer.h
tarea3/: _autosave-proyecto.kicad_pcb
tarea4/: CMakeLists.txt  README.md
tarea4/src/: freertos_timer.c  main.c
